Add Database and Implement PictureService

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12" id="konva-container">
+        <div class="col-12" id="konva-container" style="height: 100%; width: 100%">
         </div>
+        <button id="saveDrawingButton">Save Drawing</button>
     </div>
+    <button id="uploadPicture">Upload Image</button>
 </div>
+
+<script type="module" src="~/js/site.js" asp-append-version="true"></script>
+
