--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
     <script type="module" src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/konva/konva.js"></script>
     <script src="~/konva/konva.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
