--- a/Views/Home/DrawingPage.cshtml
+++ b/Views/Home/DrawingPage.cshtml
@@ -2,14 +2,24 @@
     ViewData["Title"] = "Home Page";
     
 }
-<input type="hidden" name="fieldName" id="fieldId" value="@TempData["id"]">
+
+
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12" id="konva-container" style="height: 100%; width: 100%">
+        <div class="col-md-3">
+            <button id="saveDrawingButton">Save Drawing</button>
+            <button id="uploadPicture">Upload Image</button>
+            <input type="hidden" name="fieldName" id="fieldId" value="@TempData["id"]">
+            <label for="colorPicker">Select Color</label>
+            <input type="color" id="colorPicker" value="black" />
+            <button class="btn" id="clearButton">Clear All</button>
         </div>
-        <button id="saveDrawingButton">Save Drawing</button>
+
+        <div class="col-md-9">
+            <div id="konva-container">
+            </div>
+        </div>
     </div>
-    <button id="uploadPicture">Upload Image</button>
 </div>
 
 
