Add  CREATEDBY field to database

--- a/Views/Home/DrawingPage.cshtml
+++ b/Views/Home/DrawingPage.cshtml
@@ -11,7 +11,7 @@
             <button id="uploadPicture">Upload Image</button>
             <input type="hidden" name="fieldName" id="fieldId" value="@TempData["id"]">
             <label for="colorPicker">Select Color</label>
-            <input type="color" id="colorPicker" value="black" />
+            <input type="color" class="form-control-color" id="colorPicker" value="black" />
             <button class="btn" id="clearButton">Clear All</button>
         </div>
 
